src/components/Property/Property.scss
@import '../../base.scss';

$tree-line-width: 1px;
$tree-border-style: $tree-line-width solid red;
$line-height: 40px;
$cell-padding: 10px;

.property-name,
.property-info {
  vertical-align: top;
  padding: $cell-padding;
}

.property-name {
  position: relative;
  span {
    display: inline-block;
    padding-left: $cell-padding;
    line-height: $line-height;
    vertical-align: middle;
  }
}

.property-info {
  width: 75%;
}

.property+.property {
  .property-info {
    border-top: 1px solid black;
  }
}

.property-required {
  margin-left: 10px;
  color: red;
}

.property--isclickable {
  cursor: pointer;
  font-weight: bold;
}

/* Tree */

.property+.property, .body-schema-subset+.property {
  .property-name {
    border-left: $tree-border-style;
  }
}

.body-schema-subset > td {
  border-left: $tree-border-style;
}

.property.last+.body-schema-subset > td {
  border-left: none;
}

.property-name {
  span::before {
    content: '';
    display: inline-block;
    width: $cell-padding;
    height: $tree-line-width + 6;
    vertical-align: middle;
    border-left: $tree-border-style;
  }
  span::after {
    content: '';
    border-top: $tree-border-style;
    width: 2 * $cell-padding;
    position: absolute;
    left: 0;
    top: ($line-height + 2 * $cell-padding) / 2 + 1;
  }
}

.property {
  &:first-child {
    .property-name::before {
      content: '';
      border-left: $tree-border-style;
      position: absolute;
      bottom: 0;
      left: 0;
      height: ($line-height + 2 * $cell-padding) / 2 - ($tree-line-width + 1);
    }
  }
  &:last-child, &.last {
    .property-name {
      border-left: none;
    }
    .property-name::after {
      content: '';
      border-left: $tree-border-style;
      position: absolute;
      top: 0;
      left: 0;
      height: ($line-height + 2 * $cell-padding) / 2 + 1;
    }
  }
  &:only-of-type {
    .property-name::before, .property-name::after {
      border: none;
    }
  }
}

.property {
  &:first-child {
    .property-name::after {
      border: none;
    }
  }
  &:first-child.last {
    .property-name::before {
      border: none;
    }
  }
}

